Finally fixed the Tag Crash Forgot I used sets to make the registration key and not LinkedHashSets, Additionally, we now have a basic graph visualization for recipe chains in the works